spacing: increasing spacing for blocks fixes partially #844

--- a/liqd_product/assets/scss/components/_homepage.scss
+++ b/liqd_product/assets/scss/components/_homepage.scss
@@ -1,4 +1,4 @@
-$spacer-xl: 5rem;
+$spacer-xl: 7rem;
 
 .hompage__wrapper {
     background-color: $bg-light;
